<resources>
    <string name="app_name">MOBET</string>
    <string name="title_rank">랭크</string>
    <string name="title_account">소비내역</string>
    <string name="title_home">홈</string>
    <string name="title_my">마이페이지</string>
    <string name="title_setting">설정</string>
    <string name="tab_account_history">내역</string>
    <string name="tab_account_statistics">통계</string>
    <string name="tab_game_statistics">통계</string>
    <string name="tab_game_info">경쟁전 정보</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="email">이메일</string>
    <string name="passwd">비밀번호</string>
    <string name="accept">수락</string>
    <string name="reject">거절</string>
    <string name="less">이하</string>
    <string name="greater">이상</string>
    <string name="won">원</string>
    <string name="won_char">₩</string>

    <!-- 로그인 -->
    <string name="login_email_hint">이메일을 입력해주세요</string>
    <string name="login_passwd_hint">비밀번호를 입력해주세요</string>
    <string name="login_button">로그인</string>
    <string name="login_signup">이메일로 회원가입</string>

    <!-- 회원가입 -->
    <string name="signup_message">회원가입을 위해\n몇 가지 정보를 입력해주세요.</string>
    <string name="signup_title">회원가입</string>
    <string name="signup_email_direct">직접입력</string>
    <string name="signup_passwd">비밀번호 확인</string>
    <string name="signup_nick">닉네임</string>
    <string name="signup_double">중복확인</string>
    <string name="signup_phone">전화번호</string>
    <string name="signup_send">번호인증</string>
    <string name="signup_code">인증코드</string>
    <string name="signup_button">회원가입 완료</string>

    <!-- 알림 -->
    <string name="notify_msg">{0}님이 \'{1}\'에 초대했습니다.</string>

    <!-- 경쟁전 생성 -->
    <string name="creategame_title1">경쟁전 생성</string>
    <string name="creategame_title">제목</string>
    <string name="creategame_title_hint">경쟁전 제목을 입력해주세요</string>
    <string name="creategame_public">다같이</string>
    <string name="creategame_private">우리끼리</string>
    <string name="creategame_condition">참가조건</string>
    <string name="creategame_condition_greater">얼마부터</string>
    <string name="creategame_condition_less">얼마까지</string>
    <string name="creategame_date_start">언제부터?</string>
    <string name="creategame_date_end">언제까지?</string>
    <string name="creategame_price">얼마까지?</string>
    <string name="creategame_price_hint">금액을 입력해주세요</string>
    <string name="creategame_category">카테고리\n선택하기</string>
    <string name="creategame_button">생성</string>

    <!-- 경쟁전 -->
    <string name="game_condition">참가조건</string>
    <string name="game_no_condition">조건없음</string>
    <string name="game_count">참가인원</string>
    <string name="game_count_unit">인</string>
    <string name="game_price">참가금액</string>
    <string name="game_category">카테고리</string>
    <string name="game_compete">경쟁전 참여</string>
    <string name="game_compete_out">경쟁전에서 나가기</string>
    <string name="game_compete_alert">경쟁전 참여가 완료되었습니다.</string>
    <string name="game_compete_out_alert">경쟁전에서 나갔습니다.</string>
    <string name="game_member">맴버 목록</string>
    <string name="game_invite_btn">친구초대</string>
    <string name="game_invite">초대</string>
    <string name="game_delete">경쟁전 삭제</string>
    <string name="game_delete_alert">정말로 삭제하시겠습니까?</string>
    <string name="game_remain">&lt;font color=\"#4F4F4F\"&gt;{0}월 {1}일&lt;/font&gt;&lt;font color=\"#B1B1B1\"&gt;&lt;small&gt;까지&lt;/small&gt;&lt;br&gt;앞으로&lt;/font&gt; {2}일</string>

    <!-- 랭크 -->
    <string name="rank_rank">#</string>
    <string name="rank_nick">닉네임</string>
    <string name="rank_score">등급/점수</string>

    <!-- 개인 랭크 -->
    <string name="personal_title">{0}님의 랭크</string>
    <string name="personal_grade">현재등급</string>
    <string name="personal_rank">현재순위</string>
    <string name="personal_win">승리횟수</string>
    <string name="personal_first">1등비율</string>
    <string name="personal_play">경쟁전수</string>

    <!-- 마이페이지 -->
    <string name="rest_money">남은 금액 : </string>
    <string name="playing">진행중</string>
    <string name="ending">전적</string>

    <!-- 설정 -->
    <string name="setting_profile">프로필 관리</string>
    <string name="setting_profile_img">프로필 이미지 변경</string>
    <string name="setting_friend">친구 관리</string>
    <string name="setting_friend_add">친구 추가</string>
    <string name="setting_friend_del">친구 삭제</string>
    <string name="setting_friend_msg">닉네임을 입력해주세요</string>
    <string name="setting_account">계정 관리</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_logout_alert">정말로 로그아웃하시겠습니까?</string>

    <!-- 카테고리 -->
    <string name="category">카테고리</string>
    <string name="category_all">전체</string>
    <string name="restaurant">식사</string>
    <string name="cafe">카페/간식</string>
    <string name="life_style">생활</string>
    <string name="culture">문화/예술</string>
    <string name="mart">마트</string>
    <string name="health">의료/건강</string>
    <string name="transportation">교통</string>
    <string name="cvs">편의점</string>
    <string name="lodging">숙박</string>
    <string name="car">자동차</string>

    <!-- 소비내역 -->
    <string name="month_day">M월 d일</string>
    <string name="month">M월</string>
    <string name="account_expense">지출</string>
    <string name="account_average">지난 6개월간 월 평균:</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <!-- 토스트 메시지 -->
    <string name="error">오류!!!</string>
    <string name="network_error">네트워크 오류!!!</string>
    <string name="access_error">잘못된 접근!!!</string>
    <string name="login_error">로그인 실패! 이메일과 비밀번호를 확인해주세요</string>
    <string name="signup_error">회원가입 오류!!!</string>
    <string name="not_email">이메일을 입력해주세요</string>
    <string name="not_email_ok">이메일 중복확인을 해주세요</string>
    <string name="mis_email">잘못된 이메일 주소입니다</string>
    <string name="email_ok">사용할 수 있는 이메일입니다</string>
    <string name="email_no">이미 가입한 이메일입니다</string>
    <string name="not_passwd">비밀번호를 입력해주세요</string>
    <string name="wrong_passwd">대문자, 소문자, 특수문자, 숫자 중 두 종류 이상을 선택하여 8자리 이상 입력해주세요</string>
    <string name="mis_passwd">비밀번호가 일치하지 않습니다</string>
    <string name="not_nick">닉네임을 입력해주세요</string>
    <string name="not_nick_ok">닉네임 중복확인을 해주세요</string>
    <string name="nick_ok">사용할 수 있는 닉네임입니다</string>
    <string name="nick_no">이미 가입한 닉네임입니다</string>
    <string name="not_phone">전화번호를 입력해주세요</string>
    <string name="mis_phone">잘못된 전화번호입니다</string>
    <string name="not_phone_ok">번호인증을 해주세요</string>
    <string name="phone_no">이미 가입한 번호입니다</string>
    <string name="send_code">인증코드가 전송되었습니다</string>
    <string name="not_code">인증코드를 입력해주세요</string>
    <string name="not_code_ok">인증코드를 확인해주세요</string>
    <string name="code_ok">인증되었습니다</string>
    <string name="signup_ok">회원가입이 완료되었습니다</string>
    <string name="not_number">잘못된 숫자입니다</string>
    <string name="todate_less_date">오늘 이후 날짜부터 가능합니다</string>
    <string name="enddate_less_date">시작 날짜보다 늦습니다</string>
    <string name="todate_enddate">최대 기간은 1년입니다</string>
    <string name="not_category">카테고리를 선택해주세요</string>
    <string name="invite_ok">초대 요청을 보냈습니다</string>
    <string name="profile_img_ok">프로필 이미지가 변경되었습니다</string>
    <string name="profile_img_extension">허용되지 않은 파일 형식입니다</string>
    <string name="friend_add_ok">친구 추가가 완료되었습니다</string>
    <string name="friend_add_no">존재하지 않는 닉네임입니다</string>
</resources>
