<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="profile_category"
        app:title="@string/setting_profile"
        app:iconSpaceReserved="false">

        <Preference
            app:key="profile_img"
            app:title="@string/setting_profile_img"
            app:iconSpaceReserved="false">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="friend_category"
        app:title="@string/setting_friend"
        app:iconSpaceReserved="false">

        <Preference
            app:key="friend_add"
            app:title="@string/setting_friend_add"
            app:iconSpaceReserved="false">
        </Preference>

        <Preference
            app:key="friend_del"
            app:title="@string/setting_friend_del"
            app:iconSpaceReserved="false">
            <intent
                android:targetPackage="maw.mobet"
                android:targetClass="maw.mobet.FriendActivity" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="account_category"
        app:title="@string/setting_account"
        app:iconSpaceReserved="false">

        <Preference
            app:key="logout"
            app:title="@string/setting_logout"
            app:iconSpaceReserved="false">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
