<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_rank"
        android:icon="@drawable/rank"
        android:title="@string/title_rank" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account2"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/my"
        android:title="@string/title_my" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/setting"
        android:title="@string/title_setting" />

</menu>
