<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_rank"
        android:name="maw.mobet.ui.rank.RankFragment"
        android:label="@string/title_rank"
        tools:layout="@layout/fragment_rank" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="maw.mobet.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="maw.mobet.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="maw.mobet.ui.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="maw.mobet.ui.setting.SettingFragment"
        android:label="@string/title_setting" />
</navigation>
