<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:animateLayoutChanges="true"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/netmarble"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textColor="@color/colorPrimary"
        android:letterSpacing="0.15" />

    <LinearLayout android:id="@+id/app_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="137dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:fontFamily="@font/notosanskr_b"
            android:textSize="15sp"
            android:textColor="@color/colorText"
            android:text="@string/email" />
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/email_edit_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="34dp"
            app:errorEnabled="true"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:hint="@string/login_email_hint"
                android:textColorHint="#4D7C7C7C"
                android:importantForAutofill="no"
                style="@style/EditTheme" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dp"
            android:layout_marginHorizontal="34dp"
            android:fontFamily="@font/notosanskr_b"
            android:textSize="15sp"
            android:textColor="@color/colorText"
            android:text="@string/passwd" />
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/passwd_edit_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="34dp"
            app:errorEnabled="true"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/passwd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:hint="@string/login_passwd_hint"
                android:textColorHint="#4D7C7C7C"
                android:importantForAutofill="no"
                style="@style/EditTheme" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="85.8dp"
            android:layout_marginHorizontal="42dp"
            android:background="@drawable/button_login"
            android:fontFamily="@font/notosanskr_b"
            android:text="@string/login_button"
            android:textSize="14.8sp"
            android:textColor="@color/colorWhiteText"
            android:onClick="onclick" />

        <TextView android:id="@+id/signup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28.8dp"
            android:fontFamily="@font/notosanskr_b"
            android:textSize="14.8sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/login_signup"
            android:onClick="onclick" />

    </LinearLayout>

</LinearLayout>