<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreategameActivity">

    <include
        layout="@layout/custom_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="29.3dp"
                android:fontFamily="@font/nanumsquare_eb"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:text="@string/creategame_title1"
                android:letterSpacing="0.1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView android:id="@+id/title2_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28.3dp"
                android:fontFamily="@font/nanumsquare_eb"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="@string/creategame_title"
                android:letterSpacing="0.05"
                app:layout_constraintTop_toBottomOf="@id/title_txt"
                app:layout_constraintStart_toStartOf="@id/title_txt" />
            <EditText android:id="@+id/title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="44.8dp"
                android:inputType="text"
                android:textSize="16.3sp"
                android:hint="@string/creategame_title_hint"
                android:importantForAutofill="no"
                app:layout_constraintTop_toBottomOf="@id/title2_txt"
                style="@style/EditTheme" />
            <RadioGroup android:id="@+id/toggle"
                android:layout_width="match_parent"
                android:layout_height="27.3dp"
                android:layout_marginTop="13dp"
                android:layout_marginHorizontal="44.8dp"
                android:background="@drawable/switch_track"
                android:orientation="horizontal"
                android:checkedButton="@id/pub_rdo"
                app:layout_constraintTop_toBottomOf="@id/title_edit">
                <RadioButton android:id="@+id/pub_rdo"
                    android:text="@string/creategame_public"
                    style="@style/RadioTheme" />
                <RadioButton android:id="@+id/pri_rdo"
                    android:text="@string/creategame_private"
                    style="@style/RadioTheme" />
            </RadioGroup>

            <TextView android:id="@+id/condition_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28.3dp"
                android:fontFamily="@font/nanumsquare_eb"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="@string/creategame_condition"
                android:letterSpacing="0.05"
                app:layout_constraintTop_toBottomOf="@id/toggle"
                app:layout_constraintStart_toStartOf="@id/title_txt" />
            <TextView android:id="@+id/won1_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48.8dp"
                android:fontFamily="@font/nanumsquare_b"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="₩"
                app:layout_constraintBottom_toBottomOf="@id/tilde_txt"
                app:layout_constraintStart_toStartOf="parent" />
            <EditText android:id="@+id/greater_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12.3dp"
                android:layout_marginEnd="26.3dp"
                android:inputType="number"
                android:textSize="16.3sp"
                android:hint="@string/creategame_condition_greater"
                android:importantForAutofill="no"
                app:layout_constraintTop_toTopOf="@id/won1_txt"
                app:layout_constraintBottom_toBottomOf="@id/won1_txt"
                app:layout_constraintStart_toEndOf="@id/won1_txt"
                app:layout_constraintEnd_toStartOf="@id/tilde_txt"
                style="@style/EditTheme" />
            <TextView android:id="@+id/tilde_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.8dp"
                android:fontFamily="@font/nanumsquare_b"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="~"
                app:layout_constraintTop_toBottomOf="@id/condition_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView android:id="@+id/won2_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26.3dp"
                android:fontFamily="@font/nanumsquare_b"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="₩"
                app:layout_constraintBottom_toBottomOf="@id/tilde_txt"
                app:layout_constraintStart_toStartOf="@id/tilde_txt" />
            <EditText android:id="@+id/less_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12.3dp"
                android:layout_marginEnd="48.8dp"
                android:inputType="number"
                android:textSize="16.3sp"
                android:hint="@string/creategame_condition_less"
                android:importantForAutofill="no"
                app:layout_constraintTop_toTopOf="@id/won2_txt"
                app:layout_constraintBottom_toBottomOf="@id/won2_txt"
                app:layout_constraintStart_toEndOf="@id/won2_txt"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/EditTheme" />

            <TextView android:id="@+id/start_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28.3dp"
                android:fontFamily="@font/nanumsquare_eb"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="@string/creategame_date_start"
                android:letterSpacing="0.05"
                app:layout_constraintTop_toBottomOf="@id/greater_edit"
                app:layout_constraintStart_toStartOf="@id/title_txt" />
            <EditText android:id="@+id/start_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11.3dp"
                android:layout_marginStart="15.5dp"
                android:layout_marginEnd="20dp"
                android:inputType="date"
                android:textSize="13.8sp"
                android:hint="YYYY-MM-DD"
                android:importantForAutofill="no"
                app:layout_constraintTop_toBottomOf="@id/start_txt"
                app:layout_constraintStart_toStartOf="@id/start_txt"
                app:layout_constraintEnd_toStartOf="@id/end_txt"
                style="@style/EditTheme" />
            <TextView android:id="@+id/end_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquare_eb"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="@string/creategame_date_end"
                android:letterSpacing="0.05"
                app:layout_constraintTop_toTopOf="@id/start_txt"
                app:layout_constraintStart_toStartOf="@id/tilde_txt" />
            <EditText android:id="@+id/end_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11.3dp"
                android:layout_marginStart="15.5dp"
                android:layout_marginEnd="44.8dp"
                android:inputType="date"
                android:textSize="13.8sp"
                android:hint="YYYY-MM-DD"
                android:importantForAutofill="no"
                app:layout_constraintTop_toBottomOf="@id/end_txt"
                app:layout_constraintStart_toStartOf="@id/end_txt"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/EditTheme" />

            <TextView android:id="@+id/price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35.3dp"
                android:fontFamily="@font/nanumsquare_eb"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="@string/creategame_price"
                android:letterSpacing="0.05"
                app:layout_constraintTop_toBottomOf="@id/start_edit"
                app:layout_constraintStart_toStartOf="@id/title_txt" />
            <EditText android:id="@+id/price_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15.5dp"
                android:layout_marginEnd="13dp"
                android:inputType="number"
                android:textSize="16.3sp"
                android:hint="@string/creategame_price_hint"
                android:importantForAutofill="no"
                app:layout_constraintTop_toBottomOf="@id/price_txt"
                app:layout_constraintStart_toStartOf="@id/price_txt"
                app:layout_constraintEnd_toStartOf="@id/price_cmb"
                style="@style/EditTheme" />
            <Spinner android:id="@+id/price_cmb"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="50.5dp"
                app:layout_constraintTop_toTopOf="@id/price_edit"
                app:layout_constraintBottom_toBottomOf="@id/price_edit"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView android:id="@+id/category_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="39.5dp"
                android:layout_marginStart="36.5dp"
                android:padding="10dp"
                android:background="@drawable/border_square"
                android:onClick="onClick"
                app:layout_constraintTop_toBottomOf="@id/price_edit"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView android:id="@+id/category_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/nanumsquare_eb"
                android:textSize="13.8sp"
                android:textColor="#81179E"
                android:text="@string/creategame_category"
                android:letterSpacing="0.05"
                android:background="@android:color/white"
                app:layout_constraintTop_toTopOf="@id/category_img"
                app:layout_constraintBottom_toBottomOf="@id/category_img"
                app:layout_constraintLeft_toLeftOf="@id/category_img"
                app:layout_constraintRight_toRightOf="@id/category_img" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39.5dp"
                android:layout_marginStart="30.8dp"
                android:minHeight="30dp"
                android:background="@drawable/button"
                android:fontFamily="@font/nanumsquare_b"
                android:textSize="13.8sp"
                android:textColor="#FFFFFF"
                android:text="@string/creategame_button"
                app:layout_constraintTop_toBottomOf="@id/category_img"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>